@@ -3126,7 +3126,7 @@ static void set_csv_delim (PRN *prn)
     sprintf(test, "%.1f", 1.0);
 
     if (test[1] == ',') {
-	gretl_print_set_delim(prn, '\t');
+	gretl_print_set_delim(prn, ';');
     } else {
 	gretl_print_set_delim(prn, ',');
     }
